--- a/StupidXHttp/.classpath
+++ b/StupidXHttp/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="src" path="java"/>
+	<classpathentry kind="src" path="volley"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
