--- a/StupidXHttp/.project
+++ b/StupidXHttp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StupidHttp</name>
+	<name>StupidXHttp</name>
 	<comment></comment>
 	<projects>
 	</projects>
